# nccl-sharing

./: .gitignore  CMakeLists.txt  README.md  bench_op.py  hvd.py  main.cu  main.ipynb  main.py  output  prof.sh  test.py
bench/: args.py  common.py  launch.py  model.py  op.py  plot.py  utils.py  worker.py
bench/results/: .gitignore
nccl/makefiles/: version.mk
nccl/src/: enqueue.cc  nccl.h.in
nccl/src/collectives/: all_reduce.cc
